--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="box">
+		<div class="box-inside" id="box1">1</div><div class="box-inside" id="box2">2</div><div class="box-inside" id="box3">3</div>
+	</div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
