--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="box">
+	<div class="holder">
 		<div class="box-inside" id="box1">1</div><div class="box-inside" id="box2">2</div><div class="box-inside" id="box3">3</div>
 	</div>
 	
