--- a/main.html
+++ b/main.html
@@ -9,7 +9,12 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="holder">
-		<div class="box-inside" id="box1">1</div><div class="box-inside" id="box2">2</div><div class="box-inside" id="box3">3</div>
+		<div>
+			<div class="box-inside" id="box3">3</div>
+		</div>
+		<div class="box-inside" id="box2">2</div>
+		
+		<div class="box-inside" id="box1">1</div>
 	</div>
 	
     <script type="text/javascript" src="./script.js">
